--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -523,8 +523,8 @@ a {
 }
 
 .features .body {
-     display: flex;
-   justify-content: space-between;
+    display: flex;
+    justify-content: space-between;
 }
 
 .features .body img {
@@ -539,7 +539,6 @@ a {
 }
 
 .features .content {
-   
     width: 41%;
     display: flex;
     flex-direction: column;
@@ -582,4 +581,122 @@ a {
 .features-2nd .images img {
     width: 470px;
     height: 440px;
+}
+/* <!-- blog --> */
+
+.blog {
+    margin-top: 135px;
+    padding: 96px;
+    background: #fffcf4;
+}
+
+
+.blog .blog-top {
+    text-align: center;
+}
+
+.blog .blog-top .desc {
+    margin: 16px auto 0;
+    color: #696262;
+    line-height: 1.75; /* 175% */
+    width: 448px;
+}
+
+.blog .blog-list {
+    display: flex;
+    margin-top: 55px;
+    gap: 30px;
+   overflow: hidden; 
+}
+
+.blog .blog-list .item {
+    width: calc(33.33% - 20px);
+    border-radius: 16px;
+    background: #fff;
+    flex-shrink: 0;
+}
+
+.blog .item:hover {
+    box-shadow: 0 16px 32px 0 rgba(0, 0, 0, 0.05);
+}
+
+.blog .item .thumb {
+    width: 100%;
+    height: 250px;
+    border-radius: 16px 16px 0 0;
+    object-fit: cover;
+}
+
+.blog .info {
+    padding: 20px 20px 28px;
+}
+
+.blog .item .date {
+    position: relative;
+    display: inline-flex;
+    align-items: center;
+    color: #5f5b53;
+    padding-bottom: 12px;
+    font-size: 1.4rem;
+    font-weight: 400;
+    line-height: 1.86; /* 185.714% */
+}
+
+.blog .item .date::before {
+    content: "";
+    width: 6px;
+    height: 6px;
+    background: var(--primary-color);
+    display: inline-block;
+    border-radius: 50%;
+    margin-right: 4px;
+}
+
+.blog .item .date::after {
+    position: absolute;
+    content: "";
+    display: inline-block;
+    bottom: 0;
+    left: 0;
+    right: -27px;
+    border-radius: 0.5px;
+    background: #e2dfda;
+    height: 1px;
+}
+
+.blog .info .title a {
+    display: inline-block;
+    margin-top: 12px;
+    color: #171100;
+    font-size: 1.6rem;
+    font-weight: 600;
+    line-height: 1.75; /* 175% */
+}
+
+.blog .info .btn {
+    font-size: 1.4rem;
+}
+
+.blog .info .btn:hover {
+    background-color: var(--primary-color);
+}
+
+.blog .dots {
+    display: flex;
+    gap: 6px;
+    justify-content: center;
+    margin-top: 38px;
+}
+
+.blog .dots .dot {
+    width: 6px;
+height: 6px;
+border-radius: 50%;
+background: #5F5B53;
+cursor: pointer;
+}
+
+.blog .dots .dot.active {
+    background: var(--primary-color);
+    cursor: default;
 }
